--- a/bp/index.html
+++ b/bp/index.html
@@ -62,7 +62,7 @@ input {
 }
 #topleft a {
 	overflow: hidden;
-	width: 1em;
+	width: 1.3em;
 	font-size: 2em;
 	text-align: center;
 	display: inline-block;
@@ -885,16 +885,16 @@ function load_day(day) {
 			MAXNCOL = ncols;
 	}
 
-	lol(function() { lol(function() {
-		for (var a = 0, aa = dbday.length; a<aa; a++) {
-			var kar = dbday[a]['kan'];
-			kar = tl(kar, UF+LF+DF, LH+LH+LH);
-			dbday['kar'] = kar;
-		}
+	//inf(['loadingu']);
+	//lol(function() { lol(function() {
+		for (var a = 0, aa = dbday.length; a<aa; a++)
+			dbday[a]['kar'] = dbday[a]['kan'] + ' ' +
+				tl(dbday[a]['kan'], UF+LF+DF, LH+LH+LH);
+
 		load_sel();
 		ev_added();
-	})});
-	return true;
+	//})});
+	//return true;
 }
 function load_sel() {
 	var compressed = true;
@@ -1056,6 +1056,7 @@ function ev_row() {
 		tab('tbmenu_row');
 		goto_row(active_row);
 	};
+	default_intxt_if_box('trow_in', 'tabh_txt');
 	render();
 }
 function ev_cirtype() {
@@ -1539,15 +1540,22 @@ function ev_mouseup(e) {
 			window[tgt.getAttribute('act')](e, tgt);
 		})});
 }
+function default_intxt_if_box(intxt, box) {
+	if (box === undefined)
+		box = intxt;
+	
+	if (ebi(box).style.display == 'block') {
+		var box = ebi(intxt);
+		box.value = box.getAttribute('sample');
+	}
+}
 function ev_srch(e) {
 	if (e !== undefined)
 		e.preventDefault();
 
+	default_intxt_if_box('tsrch');
 	hide_modals();
 	hide_viewctls();
-	var box = ebi('trow_in');
-	box.value = box.getAttribute(
-	id="trow_in" value="paste here" sample="paste here"
 	show('tsrch');
 	show('srchinf');
 	tab('tbmenu_srch');
@@ -1563,7 +1571,7 @@ function ev_tsch_input(e) {
 
 	var txt = ebi('tsrch').value.toLowerCase();
 	BOOTHS = dbday.filter(o => {
-		return o.kan.toLowerCase().indexOf(txt) !== -1 ||
+		return o.kar.toLowerCase().indexOf(txt) !== -1 ||
 			o.rom.toLowerCase().indexOf(txt) !== -1;
 	});
 	BOOTHS.sort(locsort);
